update deprecated newInstance